# ambits

./: .gitignore  Cargo.toml  README.md
.beads/: .beads-credential-key  metadata.json
.github/: bench-thresholds.json
.github/scripts/: parse_divan_bench.py
.github/workflows/: bench.yml  ci.yml
benches/: coverage.rs  ingest.rs  merkle_hash.rs  parser.rs  symbol_pipeline.rs  tracking.rs
benches/support/: fixtures.rs
claudedocs/: workflow_parser_optimizations.md
docs/spikes/: compaction-awareness.md  config-driven-tool-mappings.md
docs/workflows/: config-driven-tool-mappings.md  mcp-server-plan.md  workflow_mcp_server.md
skills/ambit/: SKILL.md
src/: app.rs  coverage.rs  events.rs  filter.rs  lib.rs  main.rs  tui.rs
src/ingest/: claude.rs  default_tools.toml  mod.rs  tool_config.rs
src/mcp/: context.rs  mod.rs  prompts.rs  resources.rs  server.rs  tools.rs
src/parser/: mod.rs  python.rs  rust.rs  typescript.rs
src/serena/: mod.rs
src/symbols/: merkle.rs  mod.rs
src/tracking/: mod.rs
src/ui/: activity.rs  compaction.rs  mod.rs  stats.rs  tree_view.rs
tests/: e2e.rs  integration_tool_config.rs
tests/helpers/: mod.rs
