[package]
name = "ambits"
version = "0.16.0"
edition = "2021"
description = "command line utility for symbols used by Claude agents"
repository = "https://github.com/joshLong145/ambits"
license = "MIT"
keywords = ["claude", "claude-code", "serena"]
categories = ["command-line-utilities"]
exclude = [
    "images/*"
]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
ignore = "0.4"
notify = "7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
serde-pickle = "1.2"
flume = "0.12"
toml = { version = "0.8", default-features = false, features = ["parse"] }
blake3 = "1"
regex = "1"
dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dep:dhat"]

[dev-dependencies]
tempfile = "3"
divan = "0.1.21"

[[bench]]
name = "merkle_hash"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "ingest"
harness = false

[[bench]]
name = "coverage"
harness = false

[[bench]]
name = "tracking"
harness = false

[[bench]]
name = "symbol_pipeline"
harness = false

[[bin]]
name = "heap_probe"
path = "src/bin/heap_probe.rs"
required-features = ["dhat-heap"]

[lib]
name = "ambits"
path = "src/lib.rs"

[[bin]]
name = "ambits"
path = "src/main.rs"
